--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Monkey Wrench",
   "version": "0",
-  "permissions": [],
+  "permissions": ["activeTab", "storage"],
   "background": {"scripts": ["background.js"]},
   "browser_action": {"default_title": "Monkey Wrench"}
 }
