--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Monkey Wrench",
   "version": "0",
-  "permissions": ["nativeMessaging"],
+  "permissions": ["storage", "nativeMessaging"],
   "browser_action": {"default_title": "Monkey Wrench"},
   "options_ui": {"page": "options.html"},
   "background": {"scripts": ["wrench.js"]}
