--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,8 @@
   "name": "Monkey Wrench",
   "version": "0",
   "permissions": ["storage", "nativeMessaging"],
-  "browser_action": {"default_title": "Monkey Wrench"},
+  "browser_action":
+    {"default_title": "Monkey Wrench", "default_popup": "popup.html"},
   "options_ui": {"page": "options.html"},
   "background": {"scripts": ["wrench.js"]}
 }
