--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
   "browser_action":
     {"default_title": "Monkey Wrench", "default_popup": "popup.html"},
   "options_ui": {"page": "options.html"},
-  "background": {"scripts": ["wrench.js"]}
+  "background": {"scripts": ["browser-polyfill.js", "wrench.js"]}
 }
